k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: wiz-exercise
spec:
  selector:
    app: todo-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
